--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
         "crypto": "^1.0.1",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^8.2.1",
         "express-validator": "^7.2.1",
         "firebase-admin": "^13.4.0",
+        "google-auth-library": "^10.5.0",
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
